benchmarks/c/pregen/ragel/submatch_02__uri_rfc3986.c
#line 1 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
#include "ragel/common.c"

const char *delim = "\n";


#line 85 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"



#line 9 "gen/ragel/submatch_02__uri_rfc3986.c"
static const int uri_start = 235;
static const int uri_first_final = 235;
static const int uri_error = 0;

static const int uri_en_main = 235;


#line 87 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"


static void lex(Input *in, Output *out)
{
	char *p = in->p;
	char *pe = in->pe;
	const char
	*s1, *u1, *h1, *h3, *h5, *r1, *p1, *p3, *q1, *f1,
	*s2, *u2, *h2, *h4, *h6, *r2, *p2, *p4, *q2, *f2;
	int cs;
	

#line 27 "gen/ragel/submatch_02__uri_rfc3986.c"
	{
		cs = (int)uri_start;
	}
	
#line 98 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"


#line 32 "gen/ragel/submatch_02__uri_rfc3986.c"
{
		switch ( cs ) {
			case 235:
			goto st_case_235;
			case 0:
			goto st_case_0;
			case 1:
			goto st_case_1;
			case 2:
			goto st_case_2;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 10:
			goto st_case_10;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 16:
			goto st_case_16;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
			case 33:
			goto st_case_33;
			case 34:
			goto st_case_34;
			case 35:
			goto st_case_35;
			case 36:
			goto st_case_36;
			case 37:
			goto st_case_37;
			case 38:
			goto st_case_38;
			case 39:
			goto st_case_39;
			case 40:
			goto st_case_40;
			case 41:
			goto st_case_41;
			case 42:
			goto st_case_42;
			case 43:
			goto st_case_43;
			case 44:
			goto st_case_44;
			case 45:
			goto st_case_45;
			case 46:
			goto st_case_46;
			case 47:
			goto st_case_47;
			case 48:
			goto st_case_48;
			case 49:
			goto st_case_49;
			case 50:
			goto st_case_50;
			case 51:
			goto st_case_51;
			case 52:
			goto st_case_52;
			case 53:
			goto st_case_53;
			case 54:
			goto st_case_54;
			case 55:
			goto st_case_55;
			case 56:
			goto st_case_56;
			case 57:
			goto st_case_57;
			case 58:
			goto st_case_58;
			case 59:
			goto st_case_59;
			case 60:
			goto st_case_60;
			case 61:
			goto st_case_61;
			case 62:
			goto st_case_62;
			case 63:
			goto st_case_63;
			case 64:
			goto st_case_64;
			case 65:
			goto st_case_65;
			case 66:
			goto st_case_66;
			case 67:
			goto st_case_67;
			case 68:
			goto st_case_68;
			case 69:
			goto st_case_69;
			case 70:
			goto st_case_70;
			case 71:
			goto st_case_71;
			case 72:
			goto st_case_72;
			case 73:
			goto st_case_73;
			case 74:
			goto st_case_74;
			case 75:
			goto st_case_75;
			case 76:
			goto st_case_76;
			case 77:
			goto st_case_77;
			case 78:
			goto st_case_78;
			case 79:
			goto st_case_79;
			case 80:
			goto st_case_80;
			case 81:
			goto st_case_81;
			case 82:
			goto st_case_82;
			case 83:
			goto st_case_83;
			case 84:
			goto st_case_84;
			case 85:
			goto st_case_85;
			case 86:
			goto st_case_86;
			case 87:
			goto st_case_87;
			case 88:
			goto st_case_88;
			case 89:
			goto st_case_89;
			case 90:
			goto st_case_90;
			case 91:
			goto st_case_91;
			case 92:
			goto st_case_92;
			case 93:
			goto st_case_93;
			case 94:
			goto st_case_94;
			case 95:
			goto st_case_95;
			case 96:
			goto st_case_96;
			case 97:
			goto st_case_97;
			case 98:
			goto st_case_98;
			case 99:
			goto st_case_99;
			case 100:
			goto st_case_100;
			case 101:
			goto st_case_101;
			case 102:
			goto st_case_102;
			case 103:
			goto st_case_103;
			case 104:
			goto st_case_104;
			case 105:
			goto st_case_105;
			case 106:
			goto st_case_106;
			case 107:
			goto st_case_107;
			case 108:
			goto st_case_108;
			case 109:
			goto st_case_109;
			case 110:
			goto st_case_110;
			case 111:
			goto st_case_111;
			case 112:
			goto st_case_112;
			case 113:
			goto st_case_113;
			case 114:
			goto st_case_114;
			case 115:
			goto st_case_115;
			case 116:
			goto st_case_116;
			case 117:
			goto st_case_117;
			case 118:
			goto st_case_118;
			case 119:
			goto st_case_119;
			case 120:
			goto st_case_120;
			case 121:
			goto st_case_121;
			case 122:
			goto st_case_122;
			case 123:
			goto st_case_123;
			case 124:
			goto st_case_124;
			case 125:
			goto st_case_125;
			case 126:
			goto st_case_126;
			case 127:
			goto st_case_127;
			case 128:
			goto st_case_128;
			case 129:
			goto st_case_129;
			case 130:
			goto st_case_130;
			case 131:
			goto st_case_131;
			case 132:
			goto st_case_132;
			case 133:
			goto st_case_133;
			case 134:
			goto st_case_134;
			case 135:
			goto st_case_135;
			case 136:
			goto st_case_136;
			case 137:
			goto st_case_137;
			case 138:
			goto st_case_138;
			case 139:
			goto st_case_139;
			case 140:
			goto st_case_140;
			case 141:
			goto st_case_141;
			case 142:
			goto st_case_142;
			case 143:
			goto st_case_143;
			case 144:
			goto st_case_144;
			case 145:
			goto st_case_145;
			case 146:
			goto st_case_146;
			case 147:
			goto st_case_147;
			case 148:
			goto st_case_148;
			case 149:
			goto st_case_149;
			case 150:
			goto st_case_150;
			case 151:
			goto st_case_151;
			case 152:
			goto st_case_152;
			case 153:
			goto st_case_153;
			case 154:
			goto st_case_154;
			case 155:
			goto st_case_155;
			case 156:
			goto st_case_156;
			case 157:
			goto st_case_157;
			case 158:
			goto st_case_158;
			case 159:
			goto st_case_159;
			case 160:
			goto st_case_160;
			case 161:
			goto st_case_161;
			case 162:
			goto st_case_162;
			case 163:
			goto st_case_163;
			case 164:
			goto st_case_164;
			case 165:
			goto st_case_165;
			case 166:
			goto st_case_166;
			case 167:
			goto st_case_167;
			case 168:
			goto st_case_168;
			case 169:
			goto st_case_169;
			case 170:
			goto st_case_170;
			case 171:
			goto st_case_171;
			case 172:
			goto st_case_172;
			case 173:
			goto st_case_173;
			case 174:
			goto st_case_174;
			case 175:
			goto st_case_175;
			case 176:
			goto st_case_176;
			case 177:
			goto st_case_177;
			case 178:
			goto st_case_178;
			case 179:
			goto st_case_179;
			case 180:
			goto st_case_180;
			case 181:
			goto st_case_181;
			case 182:
			goto st_case_182;
			case 183:
			goto st_case_183;
			case 184:
			goto st_case_184;
			case 185:
			goto st_case_185;
			case 186:
			goto st_case_186;
			case 187:
			goto st_case_187;
			case 188:
			goto st_case_188;
			case 189:
			goto st_case_189;
			case 190:
			goto st_case_190;
			case 191:
			goto st_case_191;
			case 192:
			goto st_case_192;
			case 193:
			goto st_case_193;
			case 194:
			goto st_case_194;
			case 195:
			goto st_case_195;
			case 196:
			goto st_case_196;
			case 197:
			goto st_case_197;
			case 198:
			goto st_case_198;
			case 199:
			goto st_case_199;
			case 200:
			goto st_case_200;
			case 201:
			goto st_case_201;
			case 202:
			goto st_case_202;
			case 203:
			goto st_case_203;
			case 204:
			goto st_case_204;
			case 205:
			goto st_case_205;
			case 206:
			goto st_case_206;
			case 207:
			goto st_case_207;
			case 208:
			goto st_case_208;
			case 209:
			goto st_case_209;
			case 210:
			goto st_case_210;
			case 211:
			goto st_case_211;
			case 212:
			goto st_case_212;
			case 213:
			goto st_case_213;
			case 214:
			goto st_case_214;
			case 215:
			goto st_case_215;
			case 216:
			goto st_case_216;
			case 217:
			goto st_case_217;
			case 218:
			goto st_case_218;
			case 219:
			goto st_case_219;
			case 220:
			goto st_case_220;
			case 221:
			goto st_case_221;
			case 222:
			goto st_case_222;
			case 223:
			goto st_case_223;
			case 224:
			goto st_case_224;
			case 225:
			goto st_case_225;
			case 226:
			goto st_case_226;
			case 227:
			goto st_case_227;
			case 228:
			goto st_case_228;
			case 229:
			goto st_case_229;
			case 230:
			goto st_case_230;
			case 231:
			goto st_case_231;
			case 232:
			goto st_case_232;
			case 233:
			goto st_case_233;
			case 234:
			goto st_case_234;
		}
		_ctr4:
			{
#line 62 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p3 = p; }
		
#line 512 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 62 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p4 = p; }
		
#line 517 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 534 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr11:
			{
#line 62 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p4 = p; }
		
#line 541 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 558 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr16:
			{
#line 67 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			f1 = p; }
		
#line 565 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 67 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			f2 = p; }
		
#line 570 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 587 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr20:
			{
#line 67 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			f2 = p; }
		
#line 594 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 611 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr25:
			{
#line 66 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			q1 = p; }
		
#line 618 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 66 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			q2 = p; }
		
#line 623 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 640 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr30:
			{
#line 66 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			q2 = p; }
		
#line 647 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 664 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr36:
			{
#line 50 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			h5 = p; }
		
#line 671 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 50 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			h6 = p; }
		
#line 676 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p1 = p; }
		
#line 681 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 686 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 703 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr50:
			{
#line 50 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			h6 = p; }
		
#line 710 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p1 = p; }
		
#line 715 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 720 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 737 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr59:
			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 744 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 761 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr65:
			{
#line 53 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			r1 = p; }
		
#line 768 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 53 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			r2 = p; }
		
#line 773 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p1 = p; }
		
#line 778 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 783 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 800 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr88:
			{
#line 53 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			r2 = p; }
		
#line 807 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p1 = p; }
		
#line 812 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 817 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 834 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr108:
			{
#line 49 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			h4 = p; }
		
#line 841 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 50 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			h6 = p; }
		
#line 846 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p1 = p; }
		
#line 851 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 856 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 873 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_ctr182:
			{
#line 48 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			h2 = p; }
		
#line 880 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p1 = p; }
		
#line 885 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 61 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			p2 = p; }
		
#line 890 "gen/ragel/submatch_02__uri_rfc3986.c"

			{
#line 70 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			OUT("scheme: ", s1, s2);
			if (u2) OUT("user: ", u1, u2);
			if (h1) OUT("host-1: ", h1, h2);
			else if (h3) OUT("host-2: ", h3, h4);
			else if (h5) OUT("host-3: ", h5, h6);
			if (r2) OUT("port: ", r1, r2);
			if (p1) OUT("path-1: ", p1, p2);
			else if (p3) OUT("path-2: ", p3, p4);
			if (q1) OUT("query: ", q1, q2);
			if (f1) OUT("fragment: ", f1, f2);
			outc(out, '\n');
		}
		
#line 907 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st235;
		_st235:
		p+= 1;
		st_case_235:
		if ( p == pe )
			goto _out235;
		if ( ( (*( p))) > 90 ) {
			if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
				goto _ctr307;
			}
		} else if ( ( (*( p))) >= 65 ) {
			goto _ctr307;
		}
		goto _st0;
		_st0:
		st_case_0:
		goto _out0;
		_ctr307:
			{
#line 14 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			
			s1 = u1 = h1 = h3 = h5 = r1 = p1 = p3 = q1 = f1 =
			s2 = u2 = h2 = h4 = h6 = r2 = p2 = p4 = q2 = f2 = NULL;
			s1 = p;
		}
		
#line 934 "gen/ragel/submatch_02__uri_rfc3986.c"

		goto _st1;
		_st1:
		p+= 1;
		st_case_1:
		if ( p == pe )
			goto _out1;
		switch( ( (*( p))) ) {
			case 43: {
				goto _st1;
			}
			case 58: {
				goto _ctr2;
			}
		}
		if ( ( (*( p))) < 48 ) {
			if ( 45 <= ( (*( p))) && ( (*( p))) <= 46 ) {
				goto _st1;
			}
		} else if ( ( (*( p))) > 57 ) {
			if ( ( (*( p))) > 90 ) {
				if ( 97 <= ( (*( p))) && ( (*( p))) <= 122 ) {
					goto _st1;
				}
			} else if ( ( (*( p))) >= 65 ) {
				goto _st1;
			}
		} else {
			goto _st1;
		}
		goto _st0;
		_ctr2:
			{
#line 19 "../../../benchmarks/c/src/ragel/submatch_02__uri_rfc3986.rl"
			s2 = p; }
		
#line 970 "gen/ragel/submatch_02__uri_rfc3986.c"
